force-app/main/default/objects/PricingJsonSetting__mdt/PricingJsonSetting__mdt.object-meta.xml
<CustomObject>
    <description>This controls all the attributes of JSON and make it configurable.</description>
    <label>OrderQuoteJsonSetting</label>
    <pluralLabel>OrderQuoteJsonSettings</pluralLabel>
</CustomObject>