force-app/main/default/objects/PricingJsonSetting__mdt/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <description>JSON Attribute</description>
    <label>Attribute</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>