force-app/main/default/objects/PricingJsonSetting__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>If this is filled then default value is taken skipping other business logic</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>