force-app/main/default/objects/PricingJsonSetting__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This will hold the filed and will be used in creating dynamic fields for query to map with proper JSON Attributes</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>