force-app/main/default/objects/PricingJsonSetting__mdt/fields/IsDisable__c.field-meta.xml
<CustomField>
    <fullName>IsDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable any attribute of JSON this flag can be used.</description>
    <label>IsDisable</label>
    <type>Checkbox</type>
</CustomField>