force-app/main/default/objects/PricingJsonSetting__mdt/fields/Json_Node__c.field-meta.xml
<CustomField>
    <fullName>Json_Node__c</fullName>
    <label>Json Node</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IntegrationHeader</fullName>
                <default>true</default>
                <label>IntegrationHeader</label>
            </value>
            <value>
                <fullName>IntegrationDetail</fullName>
            </value>
            <value>
                <fullName>Workorders</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>