force-app/main/default/objects/PricingJsonSetting__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object&apos;s API Name, this object will be used to create dynamic query.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>