force-app/main/default/objects/PricingJsonSetting__mdt/listViews/ALL_Fields.listView-meta.xml
<ListView>
    <fullName>ALL_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Attribute__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>IsDisable__c</columns>
    <columns>Json_Node__c</columns>
    <columns>Object_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Fields</label>
</ListView>