force-app/main/default/objects/PricingJsonSetting__mdt/listViews/Field_Api_Null.listView-meta.xml
<ListView>
    <fullName>Field_Api_Null</fullName>
    <columns>DeveloperName</columns>
    <columns>Attribute__c</columns>
    <columns>Json_Node__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Default_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_API_Name__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Default_Value__c</field>
        <operation>equals</operation>
    </filters>
    <label>Field Api Null</label>
</ListView>